# agent-capability-standard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  plugin.json  pyproject.toml  settings.json
.claude-plugin/: plugin.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  conformance.yml
analysis/: 01-architectural-analysis.md  02-system-diagrams-and-features.md  03-data-model-and-erd.md  04-security-scan-findings.md  05-api-reference.md  06-environment-setup.md  07-common-tasks.md  08-testing-guide.md  09-deployment-runbook.md  10-regulatory-compliance.md  11-technical-debt-register.md  12-product-roadmap.md  13-executive-summary.md  README.md
benchmarks/: README.md  __init__.py  runner.py
benchmarks/fixtures/: mock_apis.json
benchmarks/results/: initial_benchmark_report.md
benchmarks/scenarios/: __init__.py  base.py  capability_gap.py  conflicting_sources.py  decision_audit.py  mutation_recovery.py  workflow_type_error.py
benchmarks/tests/: __init__.py  conftest.py  test_scenarios.py
conformance_fixtures/: fail_unknown_capability.workflow_catalog.yaml
docs/: FAQ.md  GLOSSARY.md  GROUNDED_AGENCY.md  PRESS_KIT.md  PUBLISHING_PLAN.md  QUICKSTART.md  TUTORIAL.md  WORKFLOW_PATTERNS.md  WORKFLOW_ROADMAP.md  grounded_agency.tex
docs/domains/: README.md
docs/grounded_agency_v2_release/: grounded_agency_v2.md  grounded_agency_v2_CHANGELOG.md
docs/guides/: MODALITY_HANDLING.md  PERSPECTIVE_VALIDATION_CHECKLIST.md
docs/integrations/: claude_agent_sdk.md  oasf_coverage.md
docs/methodology/: AGENT_ARCHITECTURE_RESEARCH.md  EXTENSION_GOVERNANCE.md  FIRST_PRINCIPLES_REASSESSMENT.md  REJECTED_CANDIDATES.md  SKILLS_ALIGNMENT_EVALUATION.md  WORKFLOW_COVERAGE.md
docs/proposals/: AICQ_PLATFORM_DESIGN.md  OASF_SAFETY_EXTENSIONS.md
docs/research/: failure_taxonomy.md  replanning_capabilities.md
examples/: README.md  capability_skills_demo.py  checkpoint_enforcement_demo.py  digital_twin_sync_loop.workflow_catalog.yaml  discovery_demo.py  grounded_agent_demo.py  grounded_query_demo.py  mcp_tools_demo.py  structured_output_demo.py  subagent_bridge_demo.py
grounded_agency/: __init__.py  _types.py  adapter.py  client.py  errors.py  mcp.py  query.py
grounded_agency/adapters/: __init__.py  oasf.py
grounded_agency/capabilities/: __init__.py  mapper.py  registry.py
grounded_agency/coordination/: __init__.py  _evidence_helpers.py  audit.py  delegation.py  evidence_bridge.py  exceptions.py  orchestrator.py  registry.py  synchronization.py
grounded_agency/discovery/: __init__.py  analyzer.py  classifier.py  gap_detector.py  pipeline.py  prompts.py  synthesizer.py  types.py
grounded_agency/hooks/: __init__.py  discovery_injector.py  evidence_collector.py  skill_tracker.py
hooks/: README.md  hooks.json  posttooluse_format_repo.sh  posttooluse_log_tool.sh  pretooluse_require_checkpoint.sh
schemas/: authority_trust_model.yaml  capability_ontology.json  capability_ontology.schema.json  capability_ontology.yaml  identity_resolution_policy.yaml  workflow_catalog.json  workflow_catalog.schema.json  workflow_catalog.yaml
scripts/: run_conformance.py
skills/: README.md
spec/: CHANGELOG.md  CITATION.cff  CONFORMANCE.md  EDGE_TYPES.md  GOVERNANCE.md  PRESS_KIT.md  RELEASE_CHECKLIST.md  RFC-0001-agent-capability-ontology-and-workflow-dsl.md  ROADMAP.md  SECURITY.md  STANDARD-v1.0.0.md  WHITEPAPER.md
tasks/: alignment-plan.md  spec-review.md
templates/: README.md  SKILL_TEMPLATE_ENHANCED.md  capability_atoms.md  composition_patterns.md  output_contracts.md  pvc_report_template.yaml
tests/: EXPECTATIONS.json  __init__.py  conftest.py  fail_ambiguous_untyped.workflow_catalog.yaml  pass_reference.workflow_catalog.yaml  test_checkpoint_marker.py  test_checkpoint_persistence.py  test_classifier_fuzz.py  test_coordination.py  test_evidence_performance.py  test_grounded_query.py  test_hook_pipeline_integration.py  test_hooks_integration.py  test_hooks_unit.py  test_mcp_integration.py  test_oasf_adapter.py  test_ontology_integrity.py  test_pretooluse_hooks.py  test_rate_limiting.py  test_safe_yaml.py  test_scaffold.py  test_sdk_e2e.py  test_sdk_integration.py  test_structured_output.py  test_toctou_race.py  test_validators.py  test_verify_audit_log.py  test_workflow_engine.py
todos/: 001-complete-p1-unbounded-memory-growth.md  002-complete-p1-toctou-race-delegation.md  003-complete-p1-delegation-state-machine.md  004-complete-p1-barrier-double-resolution.md  005-complete-p1-evidence-bridge-index.md  006-complete-p2-trust-decay-validation.md  007-complete-p2-audit-immutability-deepcopy.md  008-complete-p2-lock-ordering-documentation.md  009-complete-p2-agent-enumeration-apis.md  010-complete-p2-evidence-audit-ceremony-duplication.md  011-complete-p3-dead-code-cleanup.md
tools/: _yaml_util.py  scaffold.py  sync_skill_schemas.py  validate_benchmark_deps.py  validate_ontology.py  validate_profiles.py  validate_pvc.py  validate_skill_refs.py  validate_transform_refs.py  validate_workflows.py  validate_yaml_util_sync.py  validator_suggestions.json  verify_audit_log.py  verify_json.sh  yaml_util.py
(+378 files in other folders)
